# libproxcplusplus

./: meson.build  meson_options.txt
examples/: commstime.cpp  concurrent_fibonacci.cpp  concurrent_mandelbrot.cpp  concurrent_mandelbrot_nc.cpp  concurrent_sieve.cpp  dining_philosophers.cpp  meson.build  monte_carlo_pi.cpp  piping.cpp  stressed_alt.cpp
include/: meson.build  proxc.hpp
include/proxc/: alt.hpp  channel.hpp  config.hpp  exceptions.hpp  parallel.hpp  process.hpp  this_proc.hpp  timer.hpp  version.hpp
include/proxc/alt/: choice_base.hpp  choice_recv.hpp  choice_send.hpp  state.hpp  sync.hpp
include/proxc/channel/: base.hpp  op.hpp  op_result.hpp  rx.hpp  sync.hpp  tx.hpp
include/proxc/detail/: apply.hpp  circular_array.hpp  cpu_relax.hpp  delegate.hpp  hook.hpp  mpsc_queue.hpp  num_cpus.hpp  queue.hpp  spinlock.hpp  traits.hpp  work_steal_deque.hpp  xorshift.hpp
include/proxc/runtime/: context.hpp  scheduler.hpp
include/proxc/scheduling_policy/: policy_base.hpp  round_robin.hpp  work_stealing.hpp
src/: alt.cpp  context.cpp  meson.build  process.cpp  scheduler.cpp
src/scheduling_policy/: round_robin.cpp  work_stealing.cpp
tests/: meson.build  obj.hpp  setup.hpp  simple.cpp  test_alt.cpp  test_channel_sync.cpp  test_circular_array.cpp  test_context.cpp  test_parallel.cpp  test_process.cpp  test_scheduler.cpp  test_timer.cpp  test_work_steal_deque.cpp  test_work_stealing_policy.cpp
