#          Copyright Edvard Severin Pettersen 2017.
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE.md or copy at
#          http://www.boost.org/LICENSE_1_0.txt)

option('enable-segmented-stacks',
    type: 'boolean', value: false,
    description: 'Enable segmented stacks for coroutines.')
option('enable-valgrind',
    type: 'boolean', value: false,
    description: 'Enable support for valgrind.')

